Trying to add buttons
Tinkering around…unsuccessfully…

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
 <div id="search-results"></div>
 
+<nav id='controls'>
+<button id="prev-button" onclick="previousPage();">Previous Page</button>
+
+      <button id="next-button" onclick="nextPage();">Next Page</button>
+      ></nav>
 
 </body>
 </html>
